# Quest-Home-Editor

./: .gitattributes  .gitignore  .mcp.json  Dockerfile.linux  GUIDE.md  Makefile  README.md  build_linux.sh  frida_run.py  frida_shaders.js  v203_shader_tool.py
.github/ISSUE_TEMPLATE/: 1-cook-or-device-bug.yml  2-qol-or-editor.yml  config.yml
.github/workflows/: build.yml  release.yml
QuestHomeEditor/: CMakeLists.txt  app.rc  build.bat  build.py  build_linux.sh  do_build.bat  gen_icon.py
QuestHomeEditor/cooker/: gen_haven_combined_manifest.py  gen_i18n.py
QuestHomeEditor/lang/: strings.py
QuestHomeEditor/scripts/: build_linux.sh  build_macos.sh  build_physx.sh  build_windows.bat
QuestHomeEditor/src/: README.md  main.cpp
QuestHomeEditor/src/cook/: _ckcook.cpp  apk_debug_key.h  apk_sign_v2.h  cook_preflight.h  hsl_cooker.h  hzanim_acl.h  node_rot_fit.h  nuxd_manifest_axml.h  zip_safety.h
QuestHomeEditor/src/core/: audio_convert.h  camera.h  config.h
QuestHomeEditor/src/io/: glb2apk.h  gltf_import.h
QuestHomeEditor/src/loaders/: asmh_parser.h  gltf_loader.h  gltf_material_rules.h  matlmatl_parser.h  opa_loader.h  scene_loader.h  zip_reader_guard.h
QuestHomeEditor/src/render/: vk_renderer.h
QuestHomeEditor/src/ui/: editor.h  i18n.h  ui_core.h  ui_draw.h  ui_font.h
QuestHomeEditor/tests/: CMakeLists.txt  archive_read_limits_tests.cpp  cook_preflight_tests.cpp  gltf_material_rules_tests.cpp  zip_safety_tests.cpp
QuestHomeEditor/tools/: glsl_to_surface.py  rip_libshell_shaders.py  shader_decompile.py  shader_patterns.py  v79_transpile.py
cooker/: extract_official_collision.py  gen_embedded_assets.py  make_fsb.py  make_uvscroll_shader.py
docs/: RELIABILITY_AND_SCALING.md
hsr_renderer_cpp/: CMakeLists.txt  V79_EXTRACTED_PROPERTIES.md  _sculpturea.rendmesh  app.rc  build_linux.sh
hsr_renderer_cpp/cooker/: gen_haven_combined_manifest.py  gen_haven_stock_templates.py  gen_i18n.py
hsr_renderer_cpp/scripts/: build_linux.sh  build_windows.bat
hsr_renderer_cpp/src/: README.md  _ckcook.cpp  app_icon_rgba.h  editor.h  gltf_loader.h  hsl_cooker.h  main.cpp  opa_loader.h  scene_loader.h  types.h  vk_renderer.h
hsr_renderer_cpp/src/cook/: _ckcook.cpp  embedded_assets.cpp  haven_stock_templates.h  hsl_cooker.h  hzanim_acl.cpp  nuxd_manifest_axml.h
hsr_renderer_cpp/src/core/: config.h  load_progress.h  scene_items.h  types.h
hsr_renderer_cpp/src/impl/: stb_image_write_impl.c
hsr_renderer_cpp/src/io/: gltf_export.h  gltf_import.h
hsr_renderer_cpp/src/loaders/: gltf_loader.h  opa_loader.h  rendshad_parser.h  scene_loader.h
hsr_renderer_cpp/src/render/: vk_renderer.h
hsr_renderer_cpp/src/shadergen/: shadergen.h
hsr_renderer_cpp/src/ui/: editor.h  i18n.h  ui_core.h  ui_draw.h  ui_font.h
hsr_renderer_cpp/tools/: v79_transpile.py
magisk_quest_ctl/: quest_ctl_mcp.py
magisk_questctl_aio/zygisk/: Android.mk  Application.mk  module.cpp
v203_shaders_out/: manifest.json
